* fix height on mobile

--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     overflow: hidden;
 
     margin: 0;
